k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - name: test-container
    image: nginx
    volumeMounts:
      - name: config-volume
        mountPath: /etc/config
  volumes:
    - name: config-volume
      secret:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
        secretName: certs
  restartPolicy: Never


  volumes:
    - name: terrascan-data-sync
      emptyDir: {}
