k8s/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: terrahook
webhooks:
  - name: www.terrahook.com
    admissionReviewVersions: ["v1","v1beta1"]
    failurePolicy: Fail
    sideEffects: None
    clientConfig:
      service:
        name: terrahook
        namespace: terrascan
        path: "/v1/k8s/webhooks/terrakey/scan/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR5ekNDQXJPZ0F3SUJBZ0lKQU1JTE5WZFN6UklCTUEwR0NTcUdTSWIzRFFFQkN3VUFNSUdRTVFzd0NRWUQKVlFRR0V3SkpUakVVTUJJR0ExVUVDQXdMVFdGb1lYSmhjMmgwY21FeERUQUxCZ05WQkFjTUJGQjFibVV4RVRBUApCZ05WQkFvTUNFRmpZM1Z5YVdOek1TY3dKUVlKS29aSWh2Y05BUWtCRmhoa1pYWmhibWN1WjJGMWNrQmhZMk4xCmNtbGpjeTVqYjIweElEQWVCZ05WQkFNTUYzUmxjbkpoYUc5dmF5NTBaWEp5WVhOallXNHVjM1pqTUI0WERUSXgKTURReE1qRTFOVEV3TVZvWERUSXhNRFV4TWpFMU5URXdNVm93Z1pBeEN6QUpCZ05WQkFZVEFrbE9NUlF3RWdZRApWUVFJREF0Tll [...]
    rules:
      - apiGroups: ["apps", ""]
        resources:
          - "deployments"
          - "pods"
        apiVersions:
          - "*"
        operations:
          - CREATE
